# mastermind-genetic-algorithm

./: README.md  main.py  play_mastermind.py  pyproject.toml
src/: genetic_algorithm.py  mastermind.py  plot.py
test/: mastermind_test.py
