[project]
name = "mastermind-genetic-algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.1",
]

[dependency-groups]
lint = [
    "ruff>=0.10.0",
]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
]
